# hamponator_piton

./: README.md
docs/: guia_ros.md
lidar_subscriber/: setup.cfg
lidar_subscriber/lidar_subscriber/: lidar_subscriber.py
provide_map/map/: my_map.yaml
src/hamponator/hamponator/: CMakeLists.txt  package.xml
src/hamponator/hamponator_ia/: package.xml  setup.cfg  setup.py
src/hamponator/hamponator_ia/hamponator_ia/: fotos_predict.py  hamponator_ia.py
src/hamponator/hamponator_ia/launch/: hamponator_ia.launch.py
src/hamponator/hamponator_lidar_subscriber/: setup.py
src/hamponator/hamponator_lidar_subscriber/launch/: lidar_subscriber.launch.py
src/hamponator/hamponator_nav2_system/: package.xml  setup.cfg  setup.py
src/hamponator/hamponator_nav2_system/config/: my_map.pgm  my_map.yaml  project_params.yaml
src/hamponator/hamponator_provide_map/: package.xml  setup.cfg  setup.py
src/hamponator/hamponator_world/: CMakeLists.txt  package.xml
src/hamponator/hamponator_world/include/: borrar.txt
src/hamponator/haponator_lidar_subscriber/: package.xml  setup.cfg
src/hamponator/lidar_subscriber/: package.xml
src/hamponator/my_world/: package.xml
src/hamponator/provide_map/: package.xml
src/lidar_subscriber/: setup.py
src/my_nav2_system/: package.xml  setup.py
src/my_nav2_system/config/: my_map.pgm  nav2_default_view.rviz  nav2_params.yaml  navigate_w_replanning_and_recovery.xml  project_params.yaml
src/my_nav2_system/launch/: my_nav2_system.launch.py  my_tb3_sim_nav2.launch.py
src/provide_map/: setup.py
src/provide_map/rviz/: my_slam.rviz
(+24 files in other folders)
