<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>hamponator</name>
  <version>1.0.0</version>
  <description>A package to aggregate all packages in my_project.</description>
  <maintainer email="lbelma@upv.es">lbelmar</maintainer>
  <license>Apache License 2.0</license>
  <!-- packages in my_project -->
  <exec_depend>hamponator_nav2_system</exec_depend>
  <exec_depend>hamponator_provide_map</exec_depend>
  <exec_depend>hamponator_ia</exec_depend>
  <exec_depend>hamponator_lidar_subscriber</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>